--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,7 @@
     <link rel="stylesheet" href = "{% static "landing_page.css" %}">
     <link rel="stylesheet" href = "{% static "authentication.css" %}">
     <link rel="stylesheet" href = "{% static "chatbot.css" %}">
+    <link rel="stylesheet" href = "{% static "journal.css" %}">
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
