--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,6 @@
                         <a class="nav-link active" href="#about"> About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="journal/journal_entry"> Journal</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link active" href="#"> Therapists</a>
                         <span class="coming-soon">Coming Soon</span>
                     </li>
@@ -46,11 +43,20 @@
                 </p>
                 {% if user.is_authenticated %}
                     <a href="chat/solara_ai/" class="btn btn-custom">
-                        Start Your Journey
+                        Solara Bot
                     </a>
                 {% else %}   
                 <a href="auth/login" class="btn btn-custom">
-                    Start Your Journey
+                    Solara Bot
+                </a>                
+                {% endif %}
+                {% if user.is_authenticated %}
+                    <a href="journal/journal_entry/" class="btn btn-custom-outline">
+                        Journal
+                    </a>
+                {% else %}   
+                <a href="auth/login" class="btn btn-custom-outline">
+                    Journal
                 </a>                
                 {% endif %}
             </div>
