--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -79,7 +79,7 @@
          
         //send the user's message to the backend
         try{
-            let response = await fetch('/solara_ai/',{
+            let response = await fetch('',{
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded',
