--- a/static/chatbot.css
+++ b/static/chatbot.css
@@ -1,8 +1,15 @@
+.chat-container{
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    gap: 20px;
+}
 .card {
     background-color: #1d4241 !important;
     border: none !important;
     padding: 50px;
     margin-top: 20px;
+    width: 100%;
     border-radius: 10px !important;
     /* box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5), -10px -10px 20px rgba(255, 255, 255, 0.05); */
 }
