--- a/static/journal.css
+++ b/static/journal.css
@@ -43,6 +43,7 @@
 
 .sidebar-right a:hover {
     text-decoration: underline;
+    color: #ffd9be !important;
 }
 
 /* Journal Content */
@@ -169,6 +170,7 @@
 
 .recommendations a:hover {
     text-decoration: underline;
+    color: #ffd9be !important;
 }
 
 /* MY entries */
@@ -221,4 +223,30 @@
 }
 .pagination{
     margin-top: 20px;
+}
+
+/* graph */
+.graph {
+    width: 80%;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #1d4241;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+}
+.graph h1 {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700 !important;
+    margin-bottom: 20px;
+    color: #ef9c82;
+}
+.graph div {
+    width: 100%;
+    height: auto;
+}
+.sentiment-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
