--- a/templates/my_entries.html
+++ b/templates/my_entries.html
@@ -9,9 +9,10 @@
         <a href=""><img src="{% static 'Images/logo.png' %}" alt="Logo" class="logo"></a>
         <nav class="nav flex-column">
             <a class="nav-link active" href="{% url 'index' %}">Home</a>
-            <a class="nav-link" href="{% url 'journal_entry' %}">Create New Entry</a>
+            <a class="nav-link" href="{% url 'journal_entry' %}">New Entry</a>
             <a class="nav-link" href="">My Entries</a>
             <a class="nav-link" href="{% url 'chatbot' %}">Solara Bot</a>
+            <a class="nav-link" href="{% url 'sentiment_visualization' %}">Emotion Graphs</a>
             <a class="nav-link" href="{% url "logout" %}">Logout</a>
         </nav>
     </div>
