--- a/templates/sentiment_visualization.html
+++ b/templates/sentiment_visualization.html
@@ -21,6 +21,7 @@
             <!-- Plotly graph will be rendered here -->
             {{ graph_html | safe }}
         </div>
+        <p>This chart shows how your mood has changed over the week based on your journal entries.</p>
     </div>
 
 </div>
