--- a/static/journal.css
+++ b/static/journal.css
@@ -60,6 +60,7 @@
     font-family: "Rubik Wet Paint", system-ui;
     text-transform: uppercase;
     letter-spacing: 2px;
+    font-size: 35px;
 }
 
 /* Entries Container */
@@ -125,16 +126,18 @@
     border-radius: 10px;
     margin-bottom: 20px;
     color: #1d4241;
+    margin-top: 20px;
 }
 
 .entry-detail p {
     font-size: 1.2rem;
     line-height: 1.6;
+    
 }
 
 .entry-detail .sentiment {
-    font-weight: bold;
-    margin-top: 20px;
+    font-weight: 700 !important;
+    margin-top: 15px;
     color: #ef9c82;
 }
 
@@ -234,12 +237,9 @@
     border-radius: 10px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
-.graph h1 {
-    text-align: center;
-    font-size: 20px;
-    font-weight: 700 !important;
-    margin-bottom: 20px;
-    color: #ef9c82;
+.graph p{
+    color: #ffd9be;
+    margin-top: 10px;
 }
 .graph div {
     width: 100%;
