--- a/static/landing_page.css
+++ b/static/landing_page.css
@@ -296,9 +296,9 @@ body{
     padding-top: 40px;
     padding: 40px;
     background-color: rgba(29, 66, 65, 0.9); 
-    background-image: url('Images/Lux-7.jpg');
+    /* background-image: url('Images/Lux-7.jpg');
     background-blend-mode: hard-light;
-    background-size: cover;
+    background-size: cover; */
     border-radius: 15px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s ease-in-out;
